Fix navigation ears not showing

--- a/src/components/global/navigation/navigation.css
+++ b/src/components/global/navigation/navigation.css
@@ -1,6 +1,5 @@
 .c-navigation {
   z-index: map(layers, modal);
-  overflow: hidden;
   background-color: $navigation-color;
 
   .has-js & {
